--- a/client-app/package.json
+++ b/client-app/package.json
@@ -9,6 +9,7 @@
     "@types/jest": "^24.9.1",
     "@types/node": "^12.12.27",
     "@types/react": "^16.9.19",
+    "@types/react-cropper": "^1.3.0",
     "@types/react-dom": "^16.9.5",
     "@types/react-widgets": "^4.4.2",
     "@types/revalidate": "^1.1.2",
@@ -19,7 +20,9 @@
     "mobx": "^5.15.4",
     "mobx-react-lite": "^1.5.2",
     "react": "^16.12.0",
+    "react-cropper": "^1.2.0",
     "react-dom": "^16.12.0",
+    "react-dropzone": "^10.2.2",
     "react-final-form": "^6.3.5",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.0",
